<resources>
    <string name="app_name">PracticalTask41</string>
    <string name="pickers">Pickers</string>
    <string name="list">List</string>
    <string name="ime_options">ImeOptions</string>
    <string name="ime_controls">Ime Controls</string>
    <string name="select_date_and_time">Select date and time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="list_view">List view</string>
    <string name="img">img</string>

    <string-array name="personAttrib">
        <item>Name</item>
        <item>Surname</item>
        <item>Age</item>
        <item>Email</item>
        <item>Phone</item>
    </string-array>
</resources>