<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="40sp"
        android:text="@string/app_name"/>

    <ScrollView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="10dp">
            <Button
                android:id="@+id/start_ime_control"
                android:layout_width="wrap_content"
                android:text="@string/ime_controls"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/start_pickers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickers"
                android:layout_margin="10dp"/>
            <Button
                android:id="@+id/start_list"
                android:layout_width="wrap_content"
                android:text="@string/list"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>