<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Pickers.PickersActivity">
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/text_datetime"
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/select_date_and_time"/>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button_date"
            android:layout_width="0dp"
            android:text="@string/date"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/button_time"
            android:layout_width="0dp"
            android:text="@string/time"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
</LinearLayout>